@@ -1,0 +1,23 @@
+name:                Count
+version:             @VERSION@
+synopsis:            Haskell count CloudI Integration Test
+description:         Haskell count CloudI Integration Test
+homepage:            https://github.com/CloudI/CloudI/
+license:             BSD4
+license-file:        ../../../LICENSE
+author:              Michael Truog
+maintainer:          mjtruog@gmail.com
+copyright:           2017 Michael Truog
+category:            Foreign
+stability:           provisional
+build-type:          Simple
+cabal-version:       >= 1.22
+
+executable           count_haskell
+  main-is:           Main.hs
+  ghc-options:       -Wall -Werror -funbox-strict-fields -threaded
+  build-depends:       base >= 4.6.0.1
+                     , cloudi == @VERSION@
+                     , bytestring
+  default-language:  Haskell2010
+
